--- a/style.kv
+++ b/style.kv
@@ -1,47 +1,54 @@
 <MyLayout>
     BoxLayout:
         orientation: 'vertical'
-        size: root.width,root.height
+        size: root.width, root.height
         padding: ('90dp', '90dp', '90dp', '90dp')
         spacing: '200dp'
-        
+
         Image:
-            source:'logo.png'
-            allow_stretch:False
-            keep_ratio:False
-            size_hint: None,None
-                width:'110dp'
-                height:'110dp'
-            
-            
-            
+            source: 'logo.png'
+            allow_stretch: False
+            keep_ratio: True
+            size_hint: None, None
+            size: '200dp', '100dp'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            canvas.before:
+                Color:
+                    rgb: (1, 1, 1)
+                Rectangle:
+                    texture: self.texture
+                    size: self.size
+                    pos: self.pos
+
         BoxLayout:
-            orientation:'vertical'
-            padding: ('90dp', '90dp', '90dp', '90dp')
+            orientation: 'vertical'
+            size_hint: None, None
+            size: '400dp', '70dp'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             spacing: '10dp'
             Label:
-                text:'Username'
-                size_hint: None,None
-                width:73
-                height:25
+                text: 'Username'
+                size_hint: None, None
+                width: 73
+                height: 25
             TextInput:
-                multiline:False
-                size_hint: None,None
+                multiline: False
+                size_hint: None, None
                 width: '400dp'
-                height:'40dp'
+                height: '40dp'
             Label:
-                text:'Password'
-                size_hint: None,None
-                width:73
-                height:25
+                text: 'Password'
+                size_hint: None, None
+                width: 73
+                height: 25
             TextInput:
-                multiline:False
-                size_hint: None,None
+                multiline: False
+                size_hint: None, None
                 width: '400dp'
-                height:'40dp'
-                password:True
+                height: '40dp'
+                password: True
             Button:
-                text:'Login'
-                size_hint: None,None
-                width:'60dp'
-                height:'40dp'
+                text: 'Login'
+                size_hint: None, None
+                width: '60dp'
+                height: '40dp'
