--- a/style.kv
+++ b/style.kv
@@ -1,4 +1,10 @@
 <MyLayout>
+    canvas.before:
+        Color:
+            rgba: 36/255,37/255,42/255,1
+        Rectangle:
+            pos: self.pos
+            size: self.size
     BoxLayout:
         orientation: 'vertical'
         size: root.width, root.height
